2006-10-20  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b21)

	* The preview window is now tied to the main window: when
	  the user raises the one, the other comes with.

2006-10-14  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b20)

	* Final (?) solution to the problem of self-signed SSL
	  certificates. Thanks a bunch to cfreeze!
	* mindless fixed the URL to the GR FAQ.

2006-07-26  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b19)

	* Rewrote most of the slideshow, adding double-buffering
	  and transitions for all versions of Java, without
	  flickering. Also finally cleaned up all threading
	  problems.
	* Removed support for transitions for previews.
	* Fixed error where clicking on the blue link
	  for the GR FAQ in applets would fail.
	* Added a framework for testing the slideshow code more
	  conveniently.
	* Added support for filtering the log: the GR_LOG_MODULES
	  environment varible can be set to a comma-delimited list
	  of modules; only those modules will appear in the log.

2006-07-20  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b18)

	* Added smooth transition effects in slideshow. For this to
	  be enabled, the slideshowTransitionDuration property needs
	  to be set to a number of milliseconds for the transition.
	  Also, it works much better on Java 1.6 beta, because the new
	  version enables OpenGL for Java 2D operations.

2006-06-07  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b17)

	* Added the ability for the screensaver to get its config
	  data from a URL.
	* Tweaked SaverBeans to make the settings interface more
	  Windows-like.

2006-04-27  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b16)

	* Added a ScreenSaver based on GR, using SaverBeans
	  <https://jdic.dev.java.net/documentation/incubator/screensaver/>
	* Reorganized some of the slideshow code to allow the
	  screensaver.
	* Implemented word-wrapping for captions in the slideshow.

2006-02-28  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b15)
