@@ -86,6 +86,9 @@ showPreview=true
 # use less if you have little memory)
 previewCacheSize=10
 
+# Draw 1/3 guidelines during crop
+previewDrawThirds=true
+
 # display the image path in the list
 showPath=true
 
@@ -311,6 +314,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.5.1-b21
-releaseDate=2006/10/20
+version=1.5.1-b22
+releaseDate=2006/10/21
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by:\n \nPierre-Luc Paour\n \n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook\nMarkus Cozowicz\nScott Gartner\nAmedeo Paglione\nChris Schwerdt\nSeth Ladd\n \n \nArtwork by Ross A. Reyman\n \n \nBundled software:\n \nImageMagick\nJava look and feel Graphics Repository icons\njpegtran, Guido Vollbeding's version\nMetadataExtractor\nSaverBeans
